@@ -70,7 +70,6 @@ setup(name=PACKAGE,
         'WebDAV': ['PyWebDAV >= 0.9.8'],
         'unoconv': ['unoconv'],
         'graphviz': ['pydot'],
-        'timezone': ['pytz'],
         'simplejson': ['simplejson'],
         'cdecimal': ['cdecimal'],
         'Levenshtein': ['python-Levenshtein'],
